--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>varsha potti</h1>
+	<img src="https://resize.indiatvnews.com/en/resize/newbucket/715_-/2024/01/ram-lalla-idol-gl-bhat-ram-mandir-1706111334.jpg">
+	<a href="https://in.search.yahoo.com/search?fr=mcafee&type=E210IN714G0&p=linkedin">LinkedIn profile</a>
+	<h2 id="skills">Skills Section</h2>
+	<li>technical</li>
+	<li>pichi</li>
+	<li>anger</li>
+	<h2 id="projects">projects section</h2>
+	<ul>
+		<li>accio portal</li>
+		<li>spotify</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
